--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,7 +1,12 @@
+spring.config.activate.on-profile=prod
 spring.datasource.url=${DB_URL}
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
-spring.datasource.driver-class-name=org.postgresql.Driver
+
+#spring.datasource.url=${DB_URL:jdbc:postgresql://junction.proxy.rlwy.net:52741/railway}
+#spring.datasource.username=${DB_USERNAME:postgres}
+#spring.datasource.password=${DB_PASSWORD:UORSyrNjdBrIDopmObYNjRlQurSvvcyf}
+
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.hibernate.ddl-auto=none
